# camera_aravis

./: CMakeLists.txt  README  README.markdown  README.rst  manifest.xml  package.xml
CMakeModules/: FindAravis.cmake
cfg/: CameraAravisConfig.cfg
src/: camnode.cpp
