<package>
  <name>camera_aravis</name>
  <version>0.0.1</version>
  <description>camera_aravis</description>
  <maintainer email="seve@unknow.com">Steve Safarik</maintainer>

  <license>LGPL</license>

  <author>strawlab</author>
  <author>Steve Safarik</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>driver_base</run_depend>
  <run_depend>tf</run_depend>

</package>
